correction of style for emphasized text (was too dark background)

--- a/web/maxdone.css
+++ b/web/maxdone.css
@@ -1,6 +1,6 @@
 span.emphasizedTextInTitle {
 	font-weight: bolder;
-	background-color: silver;
+	background-color: #F8F8FF;
 	font-family: Arial Black;
 }
 
